apply plugin: 'java'
apply plugin: 'application'

group 'advisor'
version '1.0-SNAPSHOT'

sourceCompatibility = 11
mainClassName = 'advisor.Main'

repositories {
    mavenCentral()
}

dependencies {
    compile 'com.google.code.gson:gson:+'

    compileOnly 'org.projectlombok:lombok:1.18.12'
    annotationProcessor 'org.projectlombok:lombok:1.18.12'

}

jar {
    manifest {
        attributes 'Main-Class' : 'advisor.Main'
    }
    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

run{
    standardInput = System.in
}